@@ -1,3 +1,7 @@
+FEB 24 2021
+	Reset XP counter button added to sidepane
+
+
 FEB 23 2021 (again)
     Graphics can now be enabled or disabled via the bot sidepane!
 	Hits, prayer, fatigue now displayed on Uranium
